Update Dockerfile and index.html

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,9 +5,20 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # Handle all other requests by redirecting to index.html
+  # Serve all files from the specified folder
   location / {
-    try_files $uri /index.html;
+    alias /path/to/folder;
+    try_files $uri $uri/ =404;
+  }
+
+  # Serve JS files
+  location ~* \.js$ {
+    try_files $uri $uri/ =404;
+  }
+
+  # Serve SVG files
+  location ~* \.svg$ {
+    try_files $uri $uri/ =404;
   }
 
   # Error handling
