Fix bug in login functionality

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,21 +5,13 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # Serve all files from the specified folder
   location / {
-    alias /path/to/folder;
-    try_files $uri $uri/ =404;
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+
+    try_files $uri /index.html;
   }
 
-  # Serve JS files
-  location ~* \.js$ {
-    try_files $uri $uri/ =404;
-  }
-
-  # Serve SVG files
-  location ~* \.svg$ {
-    try_files $uri $uri/ =404;
-  }
 
   # Error handling
   error_page 500 502 503 504 /50x.html;
